--- a/frontend/src/assert/css/admin/admin2.css
+++ b/frontend/src/assert/css/admin/admin2.css
@@ -10,6 +10,14 @@ h3 {
 	color: #7f7f7f;
 	font-size: 1.4em;
 }
+
+.carousel-inner{
+	margin-top: 30px;
+}
+
+.left{
+	margin-left: 560px;
+}
 ul {
 	list-style-type: none;
     margin: 0;
